Refatorações para desacoplamento e melhorias no build.